<resources>
    <string name="app_name">Stocker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_signout">Sign out</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_stocks">Stocks</string>
    <string name="menu_portfolio">Portfolio</string>
    <string name="search_for_exchange">Search for exchange</string>
    <string name="search_for_stock">Search for stock</string>
</resources>