<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.rharshit.stocker.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_stocks"
        android:name="com.rharshit.stocker.ui.stocks.StocksFragment"
        android:label="@string/menu_stocks"
        tools:layout="@layout/fragment_stocks" />

    <fragment
        android:id="@+id/nav_portfolio"
        android:name="com.rharshit.stocker.ui.portfolio.PortfolioFragment"
        android:label="@string/menu_portfolio"
        tools:layout="@layout/fragment_portfolio" />
</navigation>